syntax = "proto3";
import "ast/base.proto";
package ast.docco;


message Comment {
  string id = 1;
  ast.base.Range range = 2;
  repeated CommentBodyItem body = 3;
}

message CommentBodyItem {
  oneof inner {
    ast.base.Str text = 1;
    Property property = 2;
  }
}

message Property {
  string id = 1;
  ast.base.Range range = 2;
  string name = 3;
  PropertyValue value = 4;
}

message PropertyValue {
  oneof inner {
    ast.base.Str str = 1;
    ast.base.Num num = 2;
    ast.base.Bool bool = 3;
    PropertyValueMap parameters = 4;
    PropertyValueList list = 5;
  }
}

message PropertyValueMap {
  string id = 1;
  ast.base.Range range = 2;
  repeated Property items = 3;
}

message PropertyValueList {
  string id = 1;
  ast.base.Range range = 2;
  repeated PropertyValue items = 3;
}
